_kube/_node/ingress-prod.yaml
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dev-ov-studio
  name: nuxt-studio-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - new.offertevergelijker.nl
      secretName: prod-tls
  rules:
    - host: new.offertevergelijker.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nuxt-studio-service
                port:
                  number: 80
